# anal_mic_rel

./: .mxproject  CMakeLists.txt  Makefile  anal_mic_rel.ioc
Inc/: main.h  mic_direction.h  settings.h  stm32f4xx_it.h  tim.h
Src/: adc.c  gpio.c  main.c  mic_direction.c  stm32f4xx_it.c  tim.c
